k8s/network-policies/zipkin-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zipkin-policy
  namespace: petclinic
spec:
  podSelector:
    matchLabels:
      app: zipkin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 9411
